_added support page_

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <i class="fas fa-headphones"></i>
           <h4>Need some help?</h4>
           <p>Users can email us for support</p>
-          <a href="">EMAIL SUPPORT</a>
+          <a href="support.html">EMAIL SUPPORT</a>
         </div>
       </section>
 
