--- a/support.html
+++ b/support.html
@@ -34,6 +34,7 @@
       </div>
     </header>
 
+    <div id="error_message"></div>
     <div class="landing-body">
       <section class="upper-section">
         <div class="intro-text">
@@ -48,11 +49,11 @@
           <div class="contact-form">
             <form action="">
               <label for="name"></label>
-              <input type="text" id="fname" name="name" minlength="4" placeholder="Your full name..." required>
+              <input type="text" id="fname" name="name" minlength="4" placeholder="Your full name...">
               <label for="email"></label>
-              <input type="text" id="fname" name="name" minlength="4" pattern="[^ @]*@[^ @]*"   placeholder="Your Email..." required>
+              <input type="email" id="fname" name="name" minlength="4" pattern="[^ @]*@[^ @]*"   placeholder="Your Email..." >
               <label for="message"></label>
-              <input type="text" id="fname" name="name" minlength="15" placeholder="Your Message..." required>
+              <input type="text" id="fname" class="message" name="name" minlength="15" placeholder="Your Message...">
               <input type="submit" value="SEND">
             </form>
           </div>
@@ -64,6 +65,7 @@
       </section>
     </div>
 
+    <script src="support.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
